stylesheet.css
/* CSS Document */


/*
Font Declarations
*/
@font-face {
font-family: 'Avenir-Heavy';
src: url('../fonts/Avenir-Heavy.eot'); /* IE9 Compat Modes */
src: url('../fonts/Avenir-Heavy.eot') format('embedded-opentype'), /* IE6-IE8 */
url('../fonts/Avenir-Heavy.woff') format('woff'), /* Modern Browsers */
url('../fonts/Avenir-Heavy.ttf') format('truetype'), /* Safari, Android, iOS */
url('../fonts/Avenir-Heavy.svg#svgFontName') format('svg'); /* Legacy iOS */
}
@font-face {
font-family: 'Avenir-Light';
src: url('../fonts/Avenir-Light.eot'); /* IE9 Compat Modes */
src: url('../fonts/Avenir-Light.eot') format('embedded-opentype'), /* IE6-IE8 */
url('../fonts/Avenir-Light.woff') format('woff'), /* Modern Browsers */
url('../fonts/Avenir-Light.ttf') format('truetype'), /* Safari, Android, iOS */
url('../fonts/Avenir-Light.svg#svgFontName') format('svg'); /* Legacy iOS */
}
@font-face {
font-family: 'Avenir-Medium';
src: url('../fonts/Avenir-Medium.eot'); /* IE9 Compat Modes */
src: url('../fonts/Avenir-Medium.eot') format('embedded-opentype'), /* IE6-IE8 */
url('../fonts/Avenir-Medium.woff') format('woff'), /* Modern Browsers */
url('../fonts/Avenir-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
url('../fonts/Avenir-Medium.svg#svgFontName') format('svg'); /* Legacy iOS */
}


/*
Body Mods
*/
body {
    background: dimgrey;
    margin: 0px;
}



/*
Top Bar / Header / Nav Modifications
*/

/* Top Bar */
#topBar {
    font-family: Avenir-Light, courier;
    color: white;
    text-decoration: none;
    min-width: 768px;
    /*background-color: rgba(0, 0, 0, 0.8);*/
}

#topBar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

#topBar li a {
  display: block;
  color: white;
  text-align: center;
  /*padding: 14px 16px;*/
  text-decoration: none;
}

/* Header */
#header {
    float: left;
    padding: 20px;
}
#header a {
    font-family: Avenir-Heavy, courier;
    font-size: 24pt;
}

/* Nav & Social Block */
#navSocial {
    float: right;
    height: inherit;
    display: flex;
	flex-direction: column;
}

/* Nav */
/*#nav {
    margin-top: auto;
}
#nav li {
    float: right;
}
#nav li a {
    transition: 0.3s;
}
#nav li a:hover:not(.active) {
  background-color: #0094B6;;
}

#nav .active {
  background-color: #007185;
}

#nav li {
  text-align: center;
}

#nav li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}*/


/*
Background Video
*/
.fullscreen-bg {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  z-index: -100;
}

.fullscreen-bg__video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%) contrast(0.75) invert(1) brightness(0.3);
}

@media (min-aspect-ratio: 16/9) {
  .fullscreen-bg__video {
    height: 300%;
    top: -100%;
  }
}

@media (max-aspect-ratio: 16/9) {
  .fullscreen-bg__video {
    width: 300%;
    left: -100%;
  }
}
/* TODO: fix this? */
@media (max-width: 767px) {
  .fullscreen-bg {
    background: url('../img/videoframe.jpg') center center / cover no-repeat;
  }

  .fullscreen-bg__video {
    display: none;
  }
}


/*
Contents / Posts
*/
#contents_wrapper {
    width: 80%;
    min-width: 768px;
    margin: auto;
    text-align: center;
    font-style: normal;
    text-decoration: none;
    color: white;
    background: rgba(0, 0, 0, 0.7);
}

#contents {
    width: 80%;
    margin: auto;
    text-align: center;
    color: white;
}

/*
Text Defaults
*/
h1, h2 {
    font-family: Avenir-Heavy, courier;
}
h1 {
    font-size: 24pt;
}
h2 {
    font-size: 14pt;
}
h3, h4 {
    font-family: Avenir-Medium, courier;
}
h3 {
    font-size: 12pt;
}
h4 {
    font-size: 10pt;
}
h5, h6 {
    font-family: Avenir-Light, courier;
}
h5 {
    font-size: 10pt;
}
h6 {
    font-size: 8pt;
    font-style: italic;
}
a {
    text-decoration: none;
    color: inherit;
    font-family: Avenir-Light, courier;
}

/* Font Class Modifiers */
.light {
    font-family: Avenir-Light, courier;
}
.medium {
    font-family: Avenir-Medium, courier;
}
.heavy {
    font-family: Avenir-Heavy, courier;
}


/*
TODO: OLD Header/Nav Modifiers
*/
/*
.title {
    display: inline-block;
    white-space: normal;
    padding-top: 25px;
    padding-bottom: 25px;
    font-family: Avenir-Medium, courier;
    font-size: 50pt;
    font-style: normal;
}

header {
    user-select: none;
    cursor: pointer;
    text-transform: uppercase;
    text-align: center;
    text-decoration: none;
}*/

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
nav li {
    float: center;
}
nav li a {
    display: block;
    color: white;
    transition: 0.3s;
    font-family: Avenir-Heavy, courier;
}

nav > ul > li > a {
    /*background-color: rgba(0, 0, 0, 0);*/
    font-size: 12pt;
    padding: 14px;
}
nav > ul > li > ul > li > a {
    background-color: rgba(255, 255, 255, 0.2);
    font-size: 10pt;
    padding: 10px;
}
nav > ul > li > ul > li > ul > li > a {
    background-color: rgba(255, 255, 255, 0.4);
    font-size: 8pt;
    padding: 6px;
}

nav li a:hover {
    background-color: #0094B6;
}
nav li a:active {
    background-color: #007185;
}

li.nav_active ul {
    display: block;
}
li.nav_active > a {
    background-color: #007185;
}
li.nav_inactive ul {
    display: none;
}

/* Content Modifiers */
.content {
    display: inline-block;
    border-width: 0px 0px 5px 0px;
    border-style: solid;
    width: 100%;
    white-space: normal;
    padding-top: 25px;
    padding-bottom: 25px;
    float: center;
    clear: both;
}
.content a {
	text-align: left;
}

.iframe-container {
  overflow: hidden;
  padding-top: 56.25%; /* Default is 16:9 -> 9/16 = 56.25*/
  position: relative;
}

.scrollbox {
    overflow: auto;
    white-space: nowrap;
    overflow-y: hidden;
    height: 300px;
}
.scrollbox img {
    height: 100%;
    padding: 0px 10px;
}

.thumbnails {
    height: 200px;
    padding-top: 2px;
    padding-bottom: 2px;
}
.thumbnails div {
    display: inline-block;
    height: 100%;
}
.thumbnails iframe {
    height: 100%;
}
.thumbsmall iframe {
    width: 250px;
}

.noHover {
    pointer-events: none;
}

.iframe-container iframe {
   border: 0;
   height: 100%;
   left: 0;
   position: absolute;
   top: 0;
   width: 100%;
}
.iframe-container img {
    display: inline-block;
    font-size: 0;
    float: left;
}

.github-button {
    margin-left: auto;
    margin-right: auto;
    padding: 6px 75px;
    width: 300px;
    text-align: center;
    background-color: dimgrey;
    font-family: Avenir-Medium, courier;
    text-align: center;
    transition: 0.3s;
}
.github-button:hover {
    background-color: lightgrey;
}

/* Sub-class styles */
.mathematica img {
    border:1px solid black;
}





/* Fade-ins */
.fade-in {
    animation: 10s ease 0s normal forwards 1 fadein;
    -webkit-animation: 10s ease 0s normal forwards 1 fadein;
    -moz-animation: fadeIn ease;
    -o-animation: fadeIn ease;
    -ms-animation: fadeIn ease;
}

.fade-after-1s {
    animation-delay: -8s;
}

.fade-after-2s {
    animation-delay: -7s;
}

.fade-after-5s {
    animation-delay: -4s;

}


@keyframes fadein{
    0% { opacity:0; }
    90% { opacity:0; }
    100% { opacity:1; }
}

@-webkit-keyframes fadein{
    0% { opacity:0; }
    90% { opacity:0; }
    100% { opacity:1; }
}

@-moz-keyframes fadeIn {
    0% { opacity:0; }
    90% { opacity:0; }
    100% { opacity:1; }
}

@-o-keyframes fadeIn {
    0% { opacity:0; }
    90% { opacity:0; }
    100% { opacity:1; }
}

@-ms-keyframes fadeIn {
    0% { opacity:0; }
    90% { opacity:0; }
    100% { opacity:1; }
}

